[gd_scene load_steps=5 format=3 uid="uid://47t7x2x3dt2v"]

[ext_resource type="Script" path="res://src/Scripts/Interfaces/main_menu.gd" id="1_bld4e"]
[ext_resource type="FontFile" uid="uid://ro2k8jqjmmag" path="res://Assets/PocketMonk-15ze.ttf" id="1_tq3nc"]
[ext_resource type="PackedScene" uid="uid://b7yrr7van54j8" path="res://src/Scenes/Rooms/TestLevel.tscn" id="2_6wsey"]
[ext_resource type="PackedScene" uid="uid://bni8iiep1s4u8" path="res://src/Scenes/Interfaces/MultiplayerMenu.tscn" id="3_jjuwa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bld4e")
sp_test_scene = ExtResource("2_6wsey")
multi_player_menu = ExtResource("3_jjuwa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 481.0
offset_bottom = 270.0
color = Color(0, 0.697678, 0.52052, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 24.0
offset_right = 363.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("1_tq3nc")
theme_override_font_sizes/font_size = 48
text = "Monster Grind"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 183.0
offset_top = 118.0
offset_right = 284.0
offset_bottom = 155.0

[node name="SinglePlayerStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tq3nc")
text = "Single-Player "

[node name="MultiPlayerStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tq3nc")
text = "Multi-Player
"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tq3nc")
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tq3nc")
text = "Exit"

[connection signal="button_down" from="VBoxContainer/SinglePlayerStart" to="." method="_on_single_player_start_button_down"]
[connection signal="button_down" from="VBoxContainer/MultiPlayerStart" to="." method="_on_multi_player_start_button_down"]
[connection signal="button_down" from="VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="VBoxContainer/Exit" to="." method="_on_exit_button_down"]
